--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,8 +5,16 @@
       <!--======= Volver ========-->
       <ion-back-button *ngIf="backButton" [defaultHref]="backButton"></ion-back-button>
       <ion-menu-button *ngIf="showMenu" slot="start" menu="menu-content"></ion-menu-button>
+
+      
+    <!--======= Cerrar Modal ========-->
+
+    <ion-button (click)="dismissModal()" *ngIf="isModal">
+      <ion-icon name="close-circle-outline"></ion-icon>
+    </ion-button>
     </ion-buttons>
-    
+
+
     <ion-title>
       <strong>{{ title }}</strong>
       <div *ngIf="userRole === 'Administrador'" class="role-indicator">
