--- a/src/app/shared/components/materias-detail/materias-detail.component.html
+++ b/src/app/shared/components/materias-detail/materias-detail.component.html
@@ -3,15 +3,15 @@
 <ion-content class="ion-padding">
 
 
-  <ion-card class="materias-card" *ngIf="materias">
+  <ion-card class="materias-card" *ngIf="materia">
     <ion-card-header>
-      <ion-card-title>{{materias.name}}</ion-card-title>
+      <ion-card-title>{{materia.name}}</ion-card-title>
     </ion-card-header>
 
 
     <div class="materia-box">
       <ion-label class="label">Descripción:</ion-label>
-      <ion-text class="data">{{materias.descripcion}}</ion-text>
+      <ion-text class="data">{{materia.descripcion}}</ion-text>
     </div>
 
   </ion-card>  
