--- a/src/app/pages/main/pagina1/pagina1.page.html
+++ b/src/app/pages/main/pagina1/pagina1.page.html
@@ -1,4 +1,4 @@
-<app-header  backButton="main/pagina1" [showMenu]="true" title="Materias"></app-header>
+<app-header [showMenu]="true" title="Materias"></app-header>
 
 <ion-content fullscreen="true">
 
