--- a/src/app/shared/components/add-update-maestros/add-update-maestros.component.html
+++ b/src/app/shared/components/add-update-maestros/add-update-maestros.component.html
@@ -1,51 +1,49 @@
-<app-header [isAuth]="true" [isModal]="true"
-  [title]="maestros ? 'Actualizar Maestro' : 'Agregar Maestro' "></app-header>
+<app-header [isAuth]="true" [isModal]="true" [title]="maestros ? 'Actualizar Maestro' : 'Agregar Maestro' "></app-header>
 
 <ion-content>
   <form [formGroup]="form" class="ion-padding ion-text-center" (ngSubmit)="submit()" (keypress.enter)="submit()">
 
-    <!--Nombre-->
-
-    <app-custom-input autocomplete="nombre" [control]="form.controls.name" type="text"
-      label="Nombre"></app-custom-input>
-
+    <!-- Nombre -->
+    <app-custom-input autocomplete="nombre" [control]="form.controls.name" type="text" label="Nombre"></app-custom-input>
     <div class="validators" *ngIf="form.controls.name.errors && form.controls.name.touched">
       <div *ngIf="form.controls.name.errors?.['required']">Este campo es necesario</div>
-      <div *ngIf="form.controls.name.errors?.['minLength']">2 caracteres minimos requeridos</div>
+      <div *ngIf="form.controls.name.errors?.['minLength']">2 caracteres mínimos requeridos</div>
     </div>
 
-
-
-    <app-custom-input autocomplete="apellido" [control]="form.controls.apellido" type="text"
-      label="Descripcion"></app-custom-input>
-
+    <!-- Descripción -->
+    <app-custom-input autocomplete="apellido" [control]="form.controls.apellido" type="text" label="Descripcion"></app-custom-input>
     <div class="validators" *ngIf="form.controls.apellido.errors && form.controls.apellido.touched">
       <div *ngIf="form.controls.apellido.errors?.['required']">Este campo es necesario</div>
-      <div *ngIf="form.controls.apellido.errors?.['minLength']">4 caracteres minimos requeridos</div>
+      <div *ngIf="form.controls.apellido.errors?.['minLength']">4 caracteres mínimos requeridos</div>
     </div>
 
-    <app-custom-input autocomplete="identificacion" [control]="form.controls.identificacion" type="text"
-      label="Identificador"></app-custom-input> 
-
+    <!-- Identificador -->
+    <app-custom-input autocomplete="identificacion" [control]="form.controls.identificacion" type="text" label="Identificador"></app-custom-input>
     <div class="validators" *ngIf="form.controls.identificacion.errors && form.controls.identificacion.touched">
       <div *ngIf="form.controls.identificacion.errors?.['required']">Este campo es necesario</div>
-      <div *ngIf="form.controls.identificacion.errors?.['minLength']">4 caracteres minimos requeridos</div>
+      <div *ngIf="form.controls.identificacion.errors?.['minLength']">4 caracteres mínimos requeridos</div>
     </div>
 
-    <app-custom-input autocomplete="email" [control]="form.controls.email" type="text"
-      label="Correo Electronico"></app-custom-input>
-
+    <!-- Correo Electrónico -->
+    <app-custom-input autocomplete="email" [control]="form.controls.email" type="text" label="Correo Electronico"></app-custom-input>
     <div class="validators" *ngIf="form.controls.email.errors && form.controls.email.touched">
       <div *ngIf="form.controls.email.errors?.['required']">Este campo es necesario</div>
-      <div *ngIf="form.controls.email.errors?.['minLength']">4 caracteres minimos requeridos</div>
+      <div *ngIf="form.controls.email.errors?.['minLength']">4 caracteres mínimos requeridos</div>
     </div>
 
+    <!-- Select de Materias -->
+    <ion-item>
+      <ion-label>Materia</ion-label>
+      <ion-select formControlName="materia">
+        <ion-select-option *ngFor="let m of materias" [value]="m.aid">{{ m.name }}</ion-select-option>
+      </ion-select>
+    </ion-item>
 
+    <!-- Botón de enviar -->
     <ion-button mode="ios" class="ion-margin" type="submit" [disabled]="form.invalid">
-      {{maestros ? 'Actualizar Maestro' : 'Agregar Maestro'}}
+      {{ maestros ? 'Actualizar Maestro' : 'Agregar Maestro' }}
       <ion-icon slot="end" name="checkmark-circle-outline"></ion-icon>
     </ion-button>
 
   </form>
-
 </ion-content>
