--- a/src/app/shared/components/maestros-detail/maestros-detail.component.html
+++ b/src/app/shared/components/maestros-detail/maestros-detail.component.html
@@ -1,3 +1,6 @@
+<app-header [isAuth]="true"  [isModal]="true" title="Detalles de la Materia"></app-header>
+
+
 <ion-content class="ion-padding">
   <ion-card class="maestros-card" *ngIf="maestro">
     <ion-card-header>
