--- a/src/app/shared/components/add-update-maestros/add-update-maestros.component.html
+++ b/src/app/shared/components/add-update-maestros/add-update-maestros.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Descripción -->
-    <app-custom-input autocomplete="apellido" [control]="form.controls.apellido" type="text" label="Descripcion"></app-custom-input>
+    <app-custom-input autocomplete="apellido" [control]="form.controls.apellido" type="text" label="Apellido"></app-custom-input>
     <div class="validators" *ngIf="form.controls.apellido.errors && form.controls.apellido.touched">
       <div *ngIf="form.controls.apellido.errors?.['required']">Este campo es necesario</div>
       <div *ngIf="form.controls.apellido.errors?.['minLength']">4 caracteres mínimos requeridos</div>
