--- a/src/app/shared/components/maestros-detail/maestros-detail.component.html
+++ b/src/app/shared/components/maestros-detail/maestros-detail.component.html
@@ -1,4 +1,4 @@
-<app-header [isAuth]="true"  [isModal]="true" title="Detalles de la Materia"></app-header>
+<app-header [isAuth]="true"  [isModal]="true" title="Detalles del Maestro"></app-header>
 
 
 <ion-content class="ion-padding">
