--- a/src/app/shared/components/alumnos-detail/alumnos-detail.component.html
+++ b/src/app/shared/components/alumnos-detail/alumnos-detail.component.html
@@ -1,4 +1,5 @@
-<app-header [isAuth]="true" [isModal]="true" title="Detalles del Alumno"></app-header>
+<app-header [isAuth]="true"  [isModal]="true" title="Detalles de la Materia"></app-header>
+
 
 
 <ion-content class="ion-padding">
@@ -54,12 +55,6 @@
     <div class="maestro-box">
       <ion-label class="label">Materia:</ion-label>
       <ion-text class="data">{{ getMateriaNombre(alumno.materiaId) }}</ion-text> <!-- Muestra el nombre de la materia -->
-    </div>
-
-    
-    <div class="maestro-box">
-      <ion-label class="label">Maestro:</ion-label>
-      <ion-text class="data">{{ getMaestroNombre(alumno.maestroId) }}</ion-text> <!-- Muestra el nombre de la materia -->
     </div>
   </ion-card>
 </ion-content>
