--- a/src/app/shared/components/add-update-alumnos/add-update-alumnos.component.html
+++ b/src/app/shared/components/add-update-alumnos/add-update-alumnos.component.html
@@ -36,37 +36,52 @@
     </div>
 
     <!-- Ciclo -->
-    <app-custom-input autocomplete="ciclo" [control]="form.controls.ciclo" type="number"
-      label="Ciclo"></app-custom-input>
-    <div class="validators" *ngIf="form.controls.ciclo.errors && form.controls.ciclo.touched">
-      <div *ngIf="form.controls.ciclo.errors['required']">Este campo es necesario</div>
-      <div *ngIf="form.controls.ciclo.errors['min']">4 caracteres mínimos requeridos</div>
-    </div>
+  
+<ion-item>
+  <ion-label>Ciclo</ion-label>
+  <ion-select [formControl]="form.controls.ciclo" interface="popover">
+    <ion-select-option value="1">1</ion-select-option>
+    <ion-select-option value="2">2</ion-select-option>
+    <ion-select-option value="3">3</ion-select-option>
+    <ion-select-option value="4">4</ion-select-option>
+    <ion-select-option value="5">5</ion-select-option>
+    <ion-select-option value="6">6</ion-select-option>
+    <ion-select-option value="7">7</ion-select-option>
+    <ion-select-option value="8">8</ion-select-option>
+    <ion-select-option value="9">9</ion-select-option>
+    <ion-select-option value="10">10</ion-select-option>
+  </ion-select>
+</ion-item>
+
+<div class="validators" *ngIf="form.controls.ciclo.errors && form.controls.ciclo.touched">
+  <div *ngIf="form.controls.ciclo.errors['required']">Este campo es necesario</div>
+  <div *ngIf="form.controls.ciclo.errors['min']">1 caracter mínimos requeridos</div>
+</div>
 
     <!-- Notas -->
     <app-custom-input autocomplete="nota1" [control]="form.controls.nota1" type="number"
-      label="Nota 1"></app-custom-input>
+      label="Nota 1" (input)="checkPromedio1($event)"></app-custom-input>
     <div class="validators" *ngIf="form.controls.nota1.errors && form.controls.nota1.touched">
       <div *ngIf="form.controls.nota1.errors['required']">Este campo es necesario</div>
       <div *ngIf="form.controls.nota1.errors['min']">El valor debe ser mayor o igual a 0</div>
     </div>
 
     <app-custom-input autocomplete="nota2" [control]="form.controls.nota2" type="number"
-      label="Nota 2"></app-custom-input>
+      label="Nota 2" (input)="checkPromedio2($event)"></app-custom-input>
     <div class="validators" *ngIf="form.controls.nota2.errors && form.controls.nota2.touched">
       <div *ngIf="form.controls.nota2.errors['required']">Este campo es necesario</div>
       <div *ngIf="form.controls.nota2.errors['min']">El valor debe ser mayor o igual a 0</div>
     </div>
 
     <app-custom-input autocomplete="nota3" [control]="form.controls.nota3" type="number"
-      label="Nota 3"></app-custom-input>
+      label="Nota 3"(input)="checkPromedio3($event)"></app-custom-input>
     <div class="validators" *ngIf="form.controls.nota3.errors && form.controls.nota3.touched">
       <div *ngIf="form.controls.nota3.errors['required']">Este campo es necesario</div>
       <div *ngIf="form.controls.nota3.errors['min']">El valor debe ser mayor o igual a 0</div>
     </div>
 
     <app-custom-input autocomplete="nota4" [control]="form.controls.nota4" type="number"
-      label="Nota 4"></app-custom-input>
+      label="Nota 4"(input)="checkPromedio4($event)"></app-custom-input>
     <div class="validators" *ngIf="form.controls.nota4.errors && form.controls.nota4.touched">
       <div *ngIf="form.controls.nota4.errors['required']">Este campo es necesario</div>
       <div *ngIf="form.controls.nota4.errors['min']">El valor debe ser mayor o igual a 0</div>
@@ -77,19 +92,26 @@
  <app-custom-input autocomplete="promedio" [control]="form.controls.promedio" type="text"
  label="Promedio">
  <ng-template #inputTemplate>
-   <input [formControl]="form.controls.promedio" type="number" step="0.01" />
+   <input [formControl]="form.controls.promedio" type="number" step="0.01"  />
  </ng-template>
 </app-custom-input>
    <div class="validators" *ngIf="form.controls.promedio.errors && form.controls.promedio.touched">
      <div *ngIf="form.controls.promedio.errors['required']">Este campo es necesario</div>
      <div *ngIf="form.controls.promedio.errors['min']">El valor debe ser mayor o igual a 0</div>
-   </div>
-
+    </div>
+   <div *ngIf="form.controls.promedio.value !== null">
+    <div *ngIf="form.controls.promedio.value >= 6; else reprobado">
+      <span style="color: green;">Aprobado</span>
+    </div>
+    <ng-template #reprobado>
+      <span style="color: red;">Reprobado</span>
+    </ng-template>
+  </div>
 
     <!-- Select de Materias -->
     <ion-item>
       <ion-label>Materia</ion-label>
-      <ion-select formControlName="materiaId" (ionChange)="onSelectMateria($event)">
+      <ion-select formControlName="materiaId" (ionChange)="onSelectMateria($event)" mode="ios">
         <ion-select-option *ngFor="let m of materias" [value]="m.aid">{{ m.name }}</ion-select-option>
       </ion-select>
     </ion-item>
