--- a/src/app/shared/components/materias-detail/materias-detail.component.scss
+++ b/src/app/shared/components/materias-detail/materias-detail.component.scss
@@ -7,7 +7,14 @@
   
   .label {
     font-weight: bold;
-  }
+    margin-bottom: 10px;
+     }
+
+    .label {
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+  
   
   .data {
     color: #333; /* Color de texto para los datos */
