--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -1,12 +1,22 @@
 <app-header [showMenu]="true" title="Inicio"></app-header>
 
 
+<ion-header>
+</ion-header>
 <ion-content>
-  <ion-button *ngIf="utilsSvc.shouldShowElementForRole('Administrador', userRole)" expand="block" fill="solid" shape="round" color="primary" size="small" class="custom-button">
-    Botón para Administrador
-  </ion-button>
-  <ion-button *ngIf="utilsSvc.shouldShowElementForRole('Docente', userRole)" expand="block" fill="solid" shape="round" color="secondary" size="small" class="custom-button">
-    Botón para Docente
-  </ion-button>
+  <div class="container">
+    <ion-img src="https://th.bing.com/th/id/R.5bfc8d6979edd6cefcdced5310258729?rik=a150yCiQhbgA6w&riu=http%3a%2f%2fimagenesparacelulares.net%2fwp-content%2fuploads%2f2016%2f07%2ffrases-de-bienvenida-ranita.png&ehk=lmYAfYqN6P8S5prX5bCkqm7syrO6J0EmmV%2f%2flD0opiw%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1"></ion-img>
+  </div>
 </ion-content>
+<h3>Bienvenidos  nuestra Aplicacion Movil</h3>
+
+<ion-content>
+  <br>
+  <p></p>
+ <p>Nuestra aplicacion movil,esta enfocada al ambito estudiantil para ayudar a los docentes y asi imprementar la tecnologia  </p>
+</ion-content>
+
+
+
+ 
 
