--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -8,7 +8,7 @@
     <ion-img src="https://th.bing.com/th/id/R.5bfc8d6979edd6cefcdced5310258729?rik=a150yCiQhbgA6w&riu=http%3a%2f%2fimagenesparacelulares.net%2fwp-content%2fuploads%2f2016%2f07%2ffrases-de-bienvenida-ranita.png&ehk=lmYAfYqN6P8S5prX5bCkqm7syrO6J0EmmV%2f%2flD0opiw%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1"></ion-img>
   </div>
 </ion-content>
-<h3>Bienvenidos  nuestra Aplicacion Movil</h3>
+<h3>Bienvenidos a  nuestra Aplicacion Movil</h3>
 
 <ion-content>
   <br>
