Se crearon los paginadores y trabaje en el home

--- a/src/app/pages/main/home/home.page.scss
+++ b/src/app/pages/main/home/home.page.scss
@@ -1,19 +1,75 @@
-ion-button {
-    font-size: 18px;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
 
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  
+
+  
+.title {
+  font-family: 'Arial', sans-serif;
+  font-size: 3em; /* Ajusta el tamaño del título */
+  font-weight: bold;
+  color: #2c3e50; /* Color del texto */
+  text-align: center;
+  margin-top: 50px;
+  position: relative; /* Hace que el título sea un contenedor relativo */
+}
+
+.title::before {
+  content: '';
+  position: absolute; /* Hace que el elemento sea posicionado de forma absoluta con respecto al título */
+  top: 0;
+  left: 50%;
+  width: 100%;
+  height: 2px; /* Grosor de la línea */
+  background-color: #2c3e50; /* Color de la línea */
+  transform: translateX(-50%); /* Centra la línea horizontalmente */
+}
+
+.custom-card {
+  border: 2px solid #007bff; /* Color del borde */
+}
+
+.welcome-title {
+  color: #007bff; /* Color del texto del título */
+}
+
+
+  .image-container {
+    text-align: center;
+    margin-top: 20px; /* Ajusta el margen según sea necesario */
   }
   
-  .image-container {
-    margin-top: -40px; /* Ajusta la cantidad de píxeles según sea necesario */
+  .center-image {
+    max-width: 100%; /* Ajusta el ancho máximo de la imagen */
+    height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
+    display: inline-block;
   }
+  
+  .welcome-content {
+    font-size: 23px; /* Tamaño de la letra */
+    
+    color: #333; /* Color del texto */
+  }
+  
+  .click-card {
+    border: 2px solid #007bff; /* Color del borde */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el elemento */
+    transition: all 0.3s ease; /* Transición suave */
+    border-radius: 5px; /* Bordes redondeados */
+  }
+  
+  .click-title {
+    color: #0bde2b; /* Color del texto */
+    font-weight: bold; /* Texto en negrita */
+  }
+  
+  .click-card:hover {
+    background-color: #ffffff; /* Cambia el color de fondo al pasar el ratón sobre el elemento */
+  }
+  
+  .click-title:hover {
+    color: #007bff; /* Cambia el color del texto al pasar el ratón sobre el elemento */
+  }
+  
+  
   
  
   
