--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -1,22 +1,32 @@
 <app-header [showMenu]="true" title="Inicio"></app-header>
 
-
 <ion-header>
 </ion-header>
 <ion-content>
-  <div class="container">
-    <ion-img src="https://th.bing.com/th/id/R.5bfc8d6979edd6cefcdced5310258729?rik=a150yCiQhbgA6w&riu=http%3a%2f%2fimagenesparacelulares.net%2fwp-content%2fuploads%2f2016%2f07%2ffrases-de-bienvenida-ranita.png&ehk=lmYAfYqN6P8S5prX5bCkqm7syrO6J0EmmV%2f%2flD0opiw%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1"></ion-img>
+  
+  <h1 class="title">Gestión de Notas ULS</h1>
+
+  <div class="image-container">
+    <img src="assets/img/images-home.png" alt="Descripción de la imagen" class="center-image">
   </div>
-</ion-content>
-<h3>Bienvenidos a  nuestra Aplicacion Movil</h3>
 
-<ion-content>
-  <br>
-  <p></p>
- <p>Nuestra aplicacion movil,esta enfocada al ambito estudiantil para ayudar a los docentes y asi imprementar la tecnologia  </p>
-</ion-content>
-
-
-
+  <ion-card class="click-card" (click)="toggleWelcomeContent()">
+    <ion-card-header>
+      <ion-card-title class="click-title">Click Aquí</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  
+  <ion-card class="custom-card" *ngIf="showWelcomeContent" (click)="toggleWelcomeContent()">
+    <ion-card-header>
+      <ion-card-title class="welcome-title">Bienvenidos!</ion-card-title>
+    </ion-card-header>
+    <ion-card-content class="welcome-content">
+      <!-- Contenido de bienvenida -->
+      ¡Bienvenido a nuestra aplicación de gestión de notas! Organiza, administra y comparte notas de manera eficiente y segura. Aprovecha la sincronización en tiempo real, la autenticación segura y la capacidad de enviar notas por correo electrónico. También puedes generar reportes PDF para un análisis detallado de los progresos académicos de los estudiantes.
+    </ion-card-content>
+  </ion-card>
+  
+  
  
+</ion-content>
 
