--- a/src/app/pages/main/pagina4/pagina4.page.html
+++ b/src/app/pages/main/pagina4/pagina4.page.html
@@ -13,7 +13,7 @@
   </div>
 
   <br>
-  <ion-item-sliding class="product-item" *ngFor="let a of alumnos">
+  <ion-item-sliding class="product-item" *ngFor="let a of alumnos | paginate: { itemsPerPage: 2, currentPage: page }">
     <ion-item (click)="alumnosDetail(a)">
       <ion-label class="ion-text-center">
         <div class="name"><strong>{{a.name}} {{a.carnet}}</strong></div>
@@ -67,4 +67,10 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+
+  <!-- Paginador -->
+  <div class="ion-text-center">
+    <pagination-controls (pageChange)="page = $event"  previouslabel="Anterior" nextlabel="Siguiente" ></pagination-controls>
+  </div>
+
 </ion-content>
