--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -36,12 +36,12 @@
     Ingresar
     <ion-icon slot="end" name="log-in-outline"></ion-icon>
  </ion-button>
-<!--
- <ion-button *ngIf="utilsSvc.shouldShowElementForRole('Administrador', userRole)" color="success" class="ion-margin-top" routerLink="sign-up" routerLinkActive="router-link-active"  expand="block" mode="ios" class="submit" fill="outline">
+
+ <ion-button color="success" class="ion-margin-top" routerLink="sign-up" routerLinkActive="router-link-active"  expand="block" mode="ios" class="submit" fill="outline">
   Regístrar Rol
   <ion-icon slot="end" name="person-add-outline"></ion-icon>
 </ion-button>
--->
+
   </form>
   
 </div>
