--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -26,7 +26,19 @@
     </ion-card-content>
   </ion-card>
   
+  <div id="container">
   
+    <canvas baseChart
+     [datasets]="barChartData"
+     [labels]="barChartLabels"
+     [options]="barChartOptions"
+     [legend]="barChartLegend"
+     type="bar"
+     >
+      
+    </canvas>
+    
+  </div>
  
 </ion-content>
 
